--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,37 @@
+# name: Deploy RAG App to Hugging Face
+
+# on:
+#   push:
+#     branches: [main]
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v3
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v4
+#       with:
+#         python-version: '3.10'
+
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+
+#     - name: Push to Hugging Face Space
+#       env:
+#         HF_TOKEN: ${{ secrets.HF_TOKEN }}
+#       run: |
+#         git config --global user.email "abubakarshahzad730@gmail.com"
+#         git config --global user.name "Abu-bakar56"
+#         git remote remove space || true
+#         git remote add space https://huggingface.co/spaces/Abubakar567/internshiptask
+#         git push https://Abubakar567:$HF_TOKEN@huggingface.co/spaces/Abubakar567/internshiptask main
+
 name: Deploy RAG App to Hugging Face
 
 on:
@@ -22,7 +56,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Push to Hugging Face Space
+    - name: Configure Git and Pull Remote Changes
       env:
         HF_TOKEN: ${{ secrets.HF_TOKEN }}
       run: |
@@ -30,4 +64,11 @@ jobs:
         git config --global user.name "Abu-bakar56"
         git remote remove space || true
         git remote add space https://huggingface.co/spaces/Abubakar567/internshiptask
+        git fetch space
+        git rebase space/main
+
+    - name: Push to Hugging Face Space
+      env:
+        HF_TOKEN: ${{ secrets.HF_TOKEN }}
+      run: |
         git push https://Abubakar567:$HF_TOKEN@huggingface.co/spaces/Abubakar567/internshiptask main
