--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,27 +9,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Push to Hugging Face Space
-      env:
-        HF_TOKEN: ${{ secrets.HF_TOKEN }}
-      run: |
-        git config --global user.email "abubakarshahzad730@gmail.com"
-        git config --global user.name "Abu-bakar56"
-        git remote remove space || true
-        git remote add space https://huggingface.co/spaces/Abubakar567/internshiptask
-     
-        git push https://Abubakar567:$HF_TOKEN@huggingface.co/spaces/Abubakar567/internshiptask main
-
+      - name: Sync with Hugging Face Space
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          git config --global user.email "abubakarshahzad730@gmail.com"
+          git config --global user.name "Abu-bakar56"
+          git remote remove space || true
+          git remote add space https://huggingface.co/spaces/Abubakar567/internshiptask
+          git fetch space
+          git rebase space/main || git rebase --skip
