--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Sync and Push to Hugging Face Space
+      - name: Force Push to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
@@ -30,6 +30,4 @@ jobs:
           git config --global user.name "Abu-bakar56"
           git remote remove space || true
           git remote add space https://Abubakar567:${HF_TOKEN}@huggingface.co/spaces/Abubakar567/internshiptask
-          git fetch space
-          git rebase space/main || git rebase --skip
-          git push space HEAD:main
+          git push --force space main
