--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout full repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Required for pushing to Hugging Face (no shallow push)
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -28,12 +30,9 @@ jobs:
         run: |
           git config --global user.email "abubakarshahzad730@gmail.com"
           git config --global user.name "Abu-bakar56"
-          
-          # Add Hugging Face as a remote
+
           git remote add space https://Abubakar567:${HF_TOKEN}@huggingface.co/spaces/Abubakar567/internshiptask || true
-          
-          # Print current remotes to confirm
           git remote -v
-          
-          # Push to Hugging Face Space (force to avoid conflict)
+
+          # Force push after full checkout to avoid shallow push error
           git push --force space main
